@startuml

'ENTITY
class Submission {
    - id: long
    - submissionStatus: SubmissionStatus
    - location: Point
    - note: String
    - createdAt: LocalDateTime
    - observedAt: LocalDateTime
    - temperatureCelsius: Double
    - altitudeMeters: Double
    + getSubmissionId(): String
    + getStatus(): SubmissionStatus
    + setStatus(): SubmissionStatus
    + getCreatedAt(): LocalDateTime
    + setCreatedAt(): LocalDateTime
    + getTemperatureCelsius(): Double
    + setTemperatureCelsius(): Double
    + getAltitudeMeters(): Double
    + setAltitudeMeters(): Double
}

class SpeciesSpotting {
    - photoUrl: String
    + isValid(): boolean
    + getSpecies(): Species
    + setSpecies(): Species
}

class Species {
    - scientificName: String
    - category: String
}

class PollutionReport {
    - sensorType: String
    - pm25: Double
    - pm10: Double
    - durationHours: Double

    + getSensorType(): String
    + setSensorType(String)
    + getPM25(): Double
    + setPM25(Double)
    + getPM10(): Double
    + setPM10(Double)
    + getDurationHours()
    + setDurationHours(Double)
}

class User {
    - userId: long
    - username: String
    - fullName: String
    - email: String
    - profilePictureURL: String
    - biography: String
    - role: UserRole

    + register(username: String, email: String, password: String)
    + login(password: String): boolean
    + updateProfile(displayName: String, bio: String, profilePictureUrl: String)
    + changePassword(oldPassword: String, newPassword: String): boolean
    + deactivateAccount()
}

enum UserRole {
    CITIZEN
    ADMIN
    MODERATOR
}

'UI
class SubmissionUIView {
    + SubmissionUIView()

    - setReadOnly()
    - allowWrite()
}

class SubmissionUIForm {
    + SubmissionUIForm()

    - saveReport()
    - resetFields()
}

SubmissionUIForm --|> SubmissionUIView

class FilterUIView {
    - collectCriteria(): FilterCriteria
    - clearFilters()
}

class ProfileUI {
    + showProfile(user: User)
    + editProfile(user: User)
}

'MAP
class MapComponent {
    - loadBlips(fullMapArea: Geometry)
    - handleBlipClick(blip: Blip)
    + applyFilters(criteria: FilterCriteria)
}
note right
Map Controller just holds a Vaadin Map
end note

class BlipClickObserver {
    + onBlipClick()
    - openSubmission()
}
BlipClickObserver --> MapComponent : observes

class BlipLoaderObserver {
    + loadBlipsOnDrag()
}
BlipLoaderObserver --> MapComponent : observes

class MarkerFeature {
}
note right: This as a Vaadin SDK Class

class Blip {
    - Blip(Coordinate,Submission)

    + createBlip(double, double): Blip
    + createBlip(Submission): Blip
}

MarkerFeature <|-- Blip

class FilterCriteria {
    + startDate: LocalDateTime
    + endDate: LocalDateTime
    + submissionType: SubmissionType
    + speciesName: String
    + minPM25: float
    + maxPM25: float
    + minPM10: float
    + maxPM10: float
}

' REPOSITORY
interface JpaRepository {
    + save(Object)
    + findAll(Example<S>)
}
note right
    This interface is provided by Spring.
    It contains many methods.
    I only include methods here that I'm using
end note

interface SubmissionRepository {
    + findAllWithinArea(area: Geometry): List<Submission>
    + findByUser(user: User): List<Submission>
}

interface SpeciesRepository {
    + fuzzySearchSpeciesName(String): List<Species>
    + existsBySpeciesName(String): boolean
}

class SubmissionService {
    + findWithinGeometry(Geometry geometry): List<Submission>
    + findById(Long id): Optional<Submission>
    + findAllByCriteria(FilterCriteria criteria): List<Submission>
    + save(Submission submission): Submission
    + getAll(): List<Submission>
    - byCriteria(FilterCriteria c): Specification<Submission>
}

SubmissionRepository --|> JpaRepository
SpeciesRepository --|> JpaRepository

SpeciesRepository "1" o-- "0..*" Species : persists >
' END REPOSITORY

Submission <|-- SpeciesSpotting
Submission <|-- PollutionReport
SubmissionUIForm "1" --> "1" Submission: creates >
SpeciesSpotting "1" o-> "1" Species: is >
MapComponent *-- Blip
FilterUIView "1" --> "1" MapView : advises >
FilterUIView "1" --> "0..*" FilterCriteria: generates >
SubmissionRepository "1" o-- "0..*" Submission : persists >
ProfileUI "1" --> "1" User : handles >
User "1" --> "0..*" Submission : owns >

SubmissionService --> SubmissionRepository : calls
SubmissionService --> SpeciesRepository : calls

@enduml